--- a/Subbie HQ - Web App Front-End Files/evidence_vault_&_inbound_feed/code.html
+++ b/Subbie HQ - Web App Front-End Files/evidence_vault_&_inbound_feed/code.html
@@ -55,75 +55,99 @@
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 min-h-screen">
 <div class="flex h-screen overflow-hidden">
-<aside class="w-64 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col shrink-0">
-<div class="p-6">
-<div class="flex gap-3 items-center mb-10">
-<div class="bg-primary rounded-xl size-10 flex items-center justify-center text-white shadow-lg shadow-primary/30">
-<span class="material-symbols-outlined !text-2xl">shield_person</span>
+<div class="flex flex-col w-full">
+<header class="flex items-center justify-between border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-3">
+<div class="flex items-center gap-6">
+<div class="flex items-center gap-3 text-slate-900 dark:text-white">
+<div class="size-8 flex items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-xl filled-icon" style="font-variation-settings: 'FILL' 1">deployed_code</span>
 </div>
-<div class="flex flex-col">
-<h1 class="text-slate-900 dark:text-white text-lg font-bold leading-none tracking-tight">Subbie HQ</h1>
-<p class="text-slate-500 dark:text-slate-400 text-[10px] font-bold uppercase tracking-widest mt-1">Contract Intelligence</p>
+<h2 class="text-lg font-bold leading-tight tracking-tight">Subbie HQ</h2>
+</div>
+<label class="hidden md:flex items-center relative">
+<span class="material-symbols-outlined absolute left-3 text-slate-400 text-[18px]">search</span>
+<input class="h-9 w-72 rounded-full bg-slate-100 dark:bg-slate-800 border-transparent pl-10 pr-4 text-sm focus:ring-2 focus:ring-primary/20" placeholder="Search project data..."/>
+</label>
+</div>
+<div class="flex items-center gap-4">
+<a class="text-sm font-semibold text-slate-500 hover:text-primary" href="#">Launchpad</a>
+<button class="relative p-2 text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-800 rounded-full">
+<span class="material-symbols-outlined text-[22px]">notifications</span>
+</button>
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-9 ring-2 ring-primary/10 cursor-pointer" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBGPp3rkj_6yCpYm9eFj4pmdFiPWY1zt4EbMfu78oC7Fqf6P-V4b5kx97onB-fA822_agT7sptgm7kdhKLgXOmNgQM8SGJJRdKM8ahTTtQBTmwisB7CHp9q4tH7zDPtetOLtLRp9IogLQXL_dLwt4te8iAnFCSpPFeKhWRYVEdCawGugasnJGbIrbX8FEiGsRwH5snsdfbNBzr27J9L-XSlB9XemSjolW7k7GHC7iGxyY_k00DJs3YjSt--o5Yqlzkq7iGlEUMfVLKj");'></div>
+</div>
+</header>
+<div class="flex flex-1 overflow-hidden">
+<aside class="w-64 flex-shrink-0 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col">
+<div class="p-5 border-b border-slate-200 dark:border-slate-800">
+<div class="flex items-center gap-3">
+<div class="size-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center font-bold text-sm">SA</div>
+<div>
+<p class="text-sm font-bold text-slate-900 dark:text-white">Skyline Apartments</p>
+<p class="text-[10px] uppercase tracking-widest font-bold text-slate-500">#2024-882-AU</p>
 </div>
 </div>
-<nav class="flex flex-col gap-1.5">
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 transition-all group" href="#">
-<span class="material-symbols-outlined group-hover:text-primary">grid_view</span>
-<span class="text-sm font-semibold">Dashboard</span>
+</div>
+<nav class="flex-1 p-4 space-y-1">
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">dashboard</span>
+<span class="text-sm font-semibold">Overview</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 transition-all group" href="#">
-<span class="material-symbols-outlined group-hover:text-primary">apartment</span>
-<span class="text-sm font-semibold">Projects</span>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">description</span>
+<span class="text-sm font-semibold">Contract</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg nav-item-active" href="#">
-<span class="material-symbols-outlined">inventory_2</span>
-<span class="text-sm font-semibold">Evidence Vault</span>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">analytics</span>
+<span class="text-sm font-semibold">Scope</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 transition-all group" href="#">
-<span class="material-symbols-outlined group-hover:text-primary">request_quote</span>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">calendar_month</span>
+<span class="text-sm font-semibold">Programme</span>
+</a>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">receipt_long</span>
 <span class="text-sm font-semibold">Payment Claims</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 transition-all group" href="#">
-<span class="material-symbols-outlined group-hover:text-primary">settings</span>
+<a class="flex items-center gap-3 px-3 py-2.5 bg-primary/10 text-primary rounded-lg" href="#">
+<span class="material-symbols-outlined text-[20px] filled-icon" style="font-variation-settings: 'FILL' 1">inventory_2</span>
+<span class="text-sm font-bold">Evidence</span>
+</a>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">settings</span>
 <span class="text-sm font-semibold">Settings</span>
 </a>
 </nav>
+<div class="p-4 border-t border-slate-200 dark:border-slate-800">
+<a class="flex items-center gap-3 px-3 py-2 text-slate-500 dark:text-slate-400 hover:text-slate-900 dark:hover:text-white transition-colors" href="#">
+<span class="material-symbols-outlined text-[20px]">arrow_back</span>
+<span class="text-sm font-medium">Back to Launchpad</span>
+</a>
 </div>
-<div class="mt-auto p-4 border-t border-slate-100 dark:border-slate-800">
-<button class="w-full flex items-center justify-center gap-2 rounded-xl h-12 bg-slate-900 dark:bg-slate-800 text-white text-sm font-bold tracking-wide hover:bg-slate-800 dark:hover:bg-slate-700 transition-all shadow-sm">
+</aside>
+<main class="flex-1 flex flex-col overflow-hidden">
+<div class="border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-4">
+<div class="flex items-center justify-between">
+<div>
+<p class="text-[10px] font-bold uppercase tracking-widest text-slate-400">Project</p>
+<h1 class="text-lg font-bold text-slate-900 dark:text-white">Skyline Apartments</h1>
+<p class="text-xs text-slate-500">Contract #2024-882-AU • Evidence Workspace</p>
+</div>
+<span class="px-2 py-1 text-[10px] font-bold bg-emerald-50 text-emerald-600 rounded-full">Active</span>
+</div>
+</div>
+<div class="border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-6">
+<div class="flex flex-col lg:flex-row lg:items-center justify-between gap-6">
+<div>
+<h1 class="text-slate-900 dark:text-white text-3xl font-extrabold tracking-tight">Evidence Vault</h1>
+<p class="text-slate-500 dark:text-slate-400 mt-1 text-sm font-medium">Link inbound emails and uploads to Scope and Payment Claims.</p>
+</div>
+<button class="flex items-center gap-2 rounded-xl h-11 px-4 bg-slate-900 dark:bg-slate-800 text-white text-sm font-bold tracking-wide hover:bg-slate-800 dark:hover:bg-slate-700 transition-all shadow-sm">
 <span class="material-symbols-outlined">add_circle</span>
 <span>Upload Evidence</span>
 </button>
 </div>
-</aside>
-<main class="flex-1 flex flex-col overflow-hidden">
-<header class="flex items-center justify-between border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-4 shrink-0">
-<div class="flex items-center gap-6">
-<div class="flex items-center gap-3">
-<div class="size-8 bg-slate-100 dark:bg-slate-800 rounded-lg flex items-center justify-center">
-<span class="material-symbols-outlined text-primary">apartment</span>
 </div>
-<div>
-<h2 class="text-slate-900 dark:text-white text-sm font-bold">Skyline Apartments</h2>
-<p class="text-[10px] text-slate-500 font-medium">Project ID: #SK-2024-01</p>
-</div>
-</div>
-</div>
-<div class="flex items-center gap-6">
-<div class="relative w-80">
-<span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-slate-400">search</span>
-<input class="w-full bg-slate-100 dark:bg-slate-800 border-none rounded-xl pl-10 pr-4 h-10 text-sm focus:ring-2 focus:ring-primary/50 text-slate-900 dark:text-white" placeholder="Search evidence &amp; metadata..." type="text"/>
-</div>
-<div class="flex items-center gap-2 border-l border-slate-200 dark:border-slate-800 pl-6">
-<button class="size-10 flex items-center justify-center bg-slate-50 dark:bg-slate-800 text-slate-600 dark:text-slate-400 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors">
-<span class="material-symbols-outlined">notifications</span>
-</button>
-<button class="size-10 flex items-center justify-center bg-slate-50 dark:bg-slate-800 text-slate-600 dark:text-slate-400 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700 transition-colors overflow-hidden">
-<img alt="User Profile" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBGPp3rkj_6yCpYm9eFj4pmdFiPWY1zt4EbMfu78oC7Fqf6P-V4b5kx97onB-fA822_agT7sptgm7kdhKLgXOmNgQM8SGJJRdKM8ahTTtQBTmwisB7CHp9q4tH7zDPtetOLtLRp9IogLQXL_dLwt4te8iAnFCSpPFeKhWRYVEdCawGugasnJGbIrbX8FEiGsRwH5snsdfbNBzr27J9L-XSlB9XemSjolW7k7GHC7iGxyY_k00DJs3YjSt--o5Yqlzkq7iGlEUMfVLKj"/>
-</button>
-</div>
-</div>
-</header>
 <div class="flex-1 overflow-y-auto bg-slate-50 dark:bg-slate-950 p-8 space-y-8">
 <div class="flex flex-col lg:flex-row lg:items-center justify-between gap-6">
 <div>
@@ -355,6 +379,7 @@
 </div>
 </div>
 </main>
+</div>
 </div>
 
 </body></html>
