--- a/Subbie HQ - Web App Front-End Files/scope_clarity_&_ambiguity_tracker_1/code.html
+++ b/Subbie HQ - Web App Front-End Files/scope_clarity_&_ambiguity_tracker_1/code.html
@@ -40,80 +40,88 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-[#0d141b] dark:text-slate-200">
-<div class="relative flex h-screen w-full flex-col overflow-hidden">
-<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[#e7edf3] dark:border-slate-800 bg-white dark:bg-slate-900 px-10 py-3 flex-shrink-0 z-10">
-<div class="flex items-center gap-8">
-<div class="flex items-center gap-4 text-[#0d141b] dark:text-white">
-<div class="size-6 text-primary flex items-center justify-center">
-<span class="material-symbols-outlined filled-icon text-3xl">deployed_code</span>
+<div class="flex h-screen overflow-hidden">
+<div class="flex flex-col w-full">
+<header class="flex items-center justify-between border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-3">
+<div class="flex items-center gap-6">
+<div class="flex items-center gap-3 text-slate-900 dark:text-white">
+<div class="size-8 flex items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-xl filled-icon" style="font-variation-settings: 'FILL' 1">deployed_code</span>
 </div>
-<h2 class="text-lg font-bold leading-tight tracking-[-0.015em]">Subbie HQ</h2>
+<h2 class="text-lg font-bold leading-tight tracking-tight">Subbie HQ</h2>
 </div>
-<label class="flex flex-col min-w-40 !h-10 max-w-64">
-<div class="flex w-full flex-1 items-stretch rounded-lg h-full">
-<div class="text-[#4c739a] flex border-none bg-[#e7edf3] dark:bg-slate-800 items-center justify-center pl-4 rounded-l-lg">
-<span class="material-symbols-outlined text-xl">search</span>
-</div>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d141b] dark:text-white focus:outline-0 focus:ring-0 border-none bg-[#e7edf3] dark:bg-slate-800 placeholder:text-[#4c739a] px-4 rounded-l-none pl-2 text-base font-normal" placeholder="Search project data..." value=""/>
-</div>
+<label class="hidden md:flex items-center relative">
+<span class="material-symbols-outlined absolute left-3 text-slate-400 text-[18px]">search</span>
+<input class="h-9 w-72 rounded-full bg-slate-100 dark:bg-slate-800 border-transparent pl-10 pr-4 text-sm focus:ring-2 focus:ring-primary/20" placeholder="Search project data..."/>
 </label>
 </div>
-<div class="flex flex-1 justify-end gap-8">
-<div class="flex items-center gap-9">
-<a class="text-[#0d141b] dark:text-slate-300 text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Projects</a>
-<a class="text-[#0d141b] dark:text-slate-300 text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Claims</a>
-<a class="text-[#0d141b] dark:text-slate-300 text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Reports</a>
-</div>
-<div class="flex gap-2">
-<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-[#e7edf3] dark:bg-slate-800 text-[#0d141b] dark:text-white hover:bg-[#dbe4ee] transition-colors">
-<span class="material-symbols-outlined">notifications</span>
+<div class="flex items-center gap-4">
+<a class="text-sm font-semibold text-slate-500 hover:text-primary" href="#">Launchpad</a>
+<button class="relative p-2 text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-800 rounded-full">
+<span class="material-symbols-outlined text-[22px]">notifications</span>
 </button>
-</div>
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 border border-slate-200" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCOO2MRsmO3Au9zJNEP19TF6J8wIoJwduE2pWMyHUxHnBtoEk6JVSVZ4x9tKvmUHuDs1v0OwCepLl4JRQg9TIE1Mdng6c1WGmDQt1MTSDOkzFGmT2b8FZE1d8JGfDO8EBUmg8VVw5Ea6sVrd50JgsWOE1CN4nYOJj_WsG40OWsIAVRQGLrkOTA1XOYFA-hhTsWVQ47tQxpKk34OJS0XJV-uDHakh6Jf2HMK1C49ptNP4a9tnrCvv4hN0dsgLhYjHIjeAZV_IQ9XRX_a");'></div>
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-9 ring-2 ring-primary/10 cursor-pointer" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCOO2MRsmO3Au9zJNEP19TF6J8wIoJwduE2pWMyHUxHnBtoEk6JVSVZ4x9tKvmUHuDs1v0OwCepLl4JRQg9TIE1Mdng6c1WGmDQt1MTSDOkzFGmT2b8FZE1d8JGfDO8EBUmg8VVw5Ea6sVrd50JgsWOE1CN4nYOJj_WsG40OWsIAVRQGLrkOTA1XOYFA-hhTsWVQ47tQxpKk34OJS0XJV-uDHakh6Jf2HMK1C49ptNP4a9tnrCvv4hN0dsgLhYjHIjeAZV_IQ9XRX_a");'></div>
 </div>
 </header>
 <div class="flex flex-1 overflow-hidden">
-<aside class="w-64 flex-shrink-0 border-r border-[#e7edf3] dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col">
-<div class="p-6 flex flex-col gap-6 flex-1 overflow-y-auto">
-<div class="flex flex-col px-1">
-<h1 class="text-[#0d141b] dark:text-white text-lg font-bold leading-tight">Skyline Apartments</h1>
-<p class="text-[#4c739a] text-[10px] uppercase font-bold tracking-wider mt-1">Contract #2024-882-AU</p>
+<aside class="w-64 flex-shrink-0 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col">
+<div class="p-5 border-b border-slate-200 dark:border-slate-800">
+<div class="flex items-center gap-3">
+<div class="size-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center font-bold text-sm">SA</div>
+<div>
+<p class="text-sm font-bold text-slate-900 dark:text-white">Skyline Apartments</p>
+<p class="text-[10px] uppercase tracking-widest font-bold text-slate-500">#2024-882-AU</p>
 </div>
-<nav class="flex flex-col gap-1">
-<a class="nav-item nav-item-active" href="#">
-<span class="material-symbols-outlined filled-icon">dashboard</span>
-<p class="text-sm font-bold">Project Overview</p>
+</div>
+</div>
+<nav class="flex-1 p-4 space-y-1">
+<a class="flex items-center gap-3 px-3 py-2.5 bg-primary/10 text-primary rounded-lg" href="#">
+<span class="material-symbols-outlined text-[20px] filled-icon" style="font-variation-settings: 'FILL' 1">dashboard</span>
+<span class="text-sm font-bold">Overview</span>
 </a>
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">description</span>
-<p class="text-sm font-medium">Contract</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">description</span>
+<span class="text-sm font-semibold">Contract</span>
 </a>
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">analytics</span>
-<p class="text-sm font-medium">Scope Engine</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">analytics</span>
+<span class="text-sm font-semibold">Scope</span>
 </a>
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">calendar_today</span>
-<p class="text-sm font-medium">Programme</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">calendar_month</span>
+<span class="text-sm font-semibold">Programme</span>
 </a>
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">payments</span>
-<p class="text-sm font-medium">Claims/Invoices</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">receipt_long</span>
+<span class="text-sm font-semibold">Payment Claims</span>
 </a>
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">folder_shared</span>
-<p class="text-sm font-medium">Evidence Vault</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">inventory_2</span>
+<span class="text-sm font-semibold">Evidence</span>
+</a>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">settings</span>
+<span class="text-sm font-semibold">Settings</span>
 </a>
 </nav>
-</div>
-<div class="p-4 border-t border-[#e7edf3] dark:border-slate-800">
-<a class="nav-item" href="#">
-<span class="material-symbols-outlined">settings</span>
-<p class="text-sm font-medium">Settings</p>
+<div class="p-4 border-t border-slate-200 dark:border-slate-800">
+<a class="flex items-center gap-3 px-3 py-2 text-slate-500 dark:text-slate-400 hover:text-slate-900 dark:hover:text-white transition-colors" href="#">
+<span class="material-symbols-outlined text-[20px]">arrow_back</span>
+<span class="text-sm font-medium">Back to Launchpad</span>
 </a>
 </div>
 </aside>
 <main class="flex-1 flex flex-col overflow-y-auto bg-background-light dark:bg-background-dark">
+<div class="border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-4">
+<div class="flex items-center justify-between">
+<div>
+<p class="text-[10px] font-bold uppercase tracking-widest text-slate-400">Project</p>
+<h1 class="text-lg font-bold text-slate-900 dark:text-white">Skyline Apartments</h1>
+<p class="text-xs text-slate-500">Contract #2024-882-AU • Overview</p>
+</div>
+<span class="px-2 py-1 text-[10px] font-bold bg-emerald-50 text-emerald-600 rounded-full">Active</span>
+</div>
+</div>
 <div class="flex items-center gap-2 px-8 py-6">
 <a class="text-[#4c739a] text-xs font-medium hover:text-primary" href="#">Projects</a>
 <span class="text-[#4c739a] text-xs font-medium">/</span>
