--- a/Subbie HQ - Web App Front-End Files/scope_clarity_&_ambiguity_tracker_4/code.html
+++ b/Subbie HQ - Web App Front-End Files/scope_clarity_&_ambiguity_tracker_4/code.html
@@ -47,93 +47,100 @@
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-[#0d141b] dark:text-slate-200">
-<div class="relative flex h-screen w-full flex-col overflow-hidden">
-<header class="flex flex-shrink-0 items-center justify-between whitespace-nowrap border-b border-solid border-[#e7edf3] dark:border-slate-800 bg-white dark:bg-slate-900 px-6 py-3">
-<div class="flex items-center gap-8">
-<div class="flex items-center gap-3 text-[#0d141b] dark:text-white">
-<div class="size-6 text-primary">
-<span class="material-symbols-outlined filled-icon text-3xl">deployed_code</span>
-</div>
-<h2 class="text-lg font-black leading-tight tracking-tight">Subbie HQ</h2>
-</div>
+<div class="flex h-screen overflow-hidden">
+<div class="flex flex-col w-full">
+<header class="flex items-center justify-between border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-3">
 <div class="flex items-center gap-6">
-<a class="text-[#4c739a] dark:text-slate-400 text-sm font-medium" href="#">Projects</a>
-<a class="text-[#0d141b] dark:text-white text-sm font-bold border-b-2 border-primary py-1" href="#">Claims Engine</a>
-<a class="text-[#4c739a] dark:text-slate-400 text-sm font-medium" href="#">Scope Engine</a>
+<div class="flex items-center gap-3 text-slate-900 dark:text-white">
+<div class="size-8 flex items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-xl filled-icon" style="font-variation-settings: 'FILL' 1">deployed_code</span>
 </div>
+<h2 class="text-lg font-bold leading-tight tracking-tight">Subbie HQ</h2>
+</div>
+<label class="hidden md:flex items-center relative">
+<span class="material-symbols-outlined absolute left-3 text-slate-400 text-[18px]">search</span>
+<input class="h-9 w-72 rounded-full bg-slate-100 dark:bg-slate-800 border-transparent pl-10 pr-4 text-sm focus:ring-2 focus:ring-primary/20" placeholder="Search project data..."/>
+</label>
 </div>
 <div class="flex items-center gap-4">
-<div class="bg-slate-100 dark:bg-slate-800 rounded-full px-3 py-1 flex items-center gap-2">
-<span class="size-2 bg-green-500 rounded-full"></span>
-<span class="text-[10px] font-bold uppercase tracking-wider">System Live</span>
-</div>
-<div class="flex gap-2">
-<button class="flex items-center justify-center rounded-lg h-9 w-9 bg-[#e7edf3] dark:bg-slate-800 text-[#0d141b] dark:text-white">
-<span class="material-symbols-outlined text-xl">notifications</span>
+<a class="text-sm font-semibold text-slate-500 hover:text-primary" href="#">Launchpad</a>
+<button class="relative p-2 text-slate-500 hover:bg-slate-100 dark:hover:bg-slate-800 rounded-full">
+<span class="material-symbols-outlined text-[22px]">notifications</span>
 </button>
-</div>
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-9 border border-slate-200" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAGwMkhtUDmxXUwBpIvg4TDT5nwjmHKgulFpuPfJOz6gNp5TAbSZZ17XxTKs_4N3xV7c7NYbCrVini7F58-bqb2slBvQFyDJ7ttu8wuIUW82AL4UzzhK7oryET-6WdGJk0fbQXkaqhAVqCSh-B0tJ9VHVrkFWTfYLSQv6ZtcxRoupwkMyH-WckuQxOu5kNnCgXz7cRX68cFqgSTv4VmjZZQzJ_RymiaJPOrJwdXY4y2JBGPQyCPZJz6hu4I-s5FapruxCfOv5Zz0xZX");'></div>
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-9 ring-2 ring-primary/10 cursor-pointer" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAGwMkhtUDmxXUwBpIvg4TDT5nwjmHKgulFpuPfJOz6gNp5TAbSZZ17XxTKs_4N3xV7c7NYbCrVini7F58-bqb2slBvQFyDJ7ttu8wuIUW82AL4UzzhK7oryET-6WdGJk0fbQXkaqhAVqCSh-B0tJ9VHVrkFWTfYLSQv6ZtcxRoupwkMyH-WckuQxOu5kNnCgXz7cRX68cFqgSTv4VmjZZQzJ_RymiaJPOrJwdXY4y2JBGPQyCPZJz6hu4I-s5FapruxCfOv5Zz0xZX");'></div>
 </div>
 </header>
 <div class="flex flex-1 overflow-hidden">
-<aside class="w-64 flex-shrink-0 border-r border-[#e7edf3] dark:border-slate-800 bg-white dark:bg-slate-900 p-4 flex flex-col justify-between">
-<div class="flex flex-col gap-6">
-<div class="flex flex-col px-3 py-2 bg-slate-50 dark:bg-slate-800/50 rounded-lg">
-<h1 class="text-[#0d141b] dark:text-white text-sm font-bold leading-tight">Skyline Apartments</h1>
-<p class="text-[#4c739a] text-[10px] font-bold uppercase mt-1 tracking-wider">Contract #2024-882-AU</p>
+<aside class="w-64 flex-shrink-0 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col">
+<div class="p-5 border-b border-slate-200 dark:border-slate-800">
+<div class="flex items-center gap-3">
+<div class="size-10 rounded-lg bg-primary/10 text-primary flex items-center justify-center font-bold text-sm">SA</div>
+<div>
+<p class="text-sm font-bold text-slate-900 dark:text-white">Skyline Apartments</p>
+<p class="text-[10px] uppercase tracking-widest font-bold text-slate-500">#2024-882-AU</p>
 </div>
-<nav class="flex flex-col gap-1">
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">dashboard</span>
-<p class="text-sm font-medium">Project Overview</p>
+</div>
+</div>
+<nav class="flex-1 p-4 space-y-1">
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">dashboard</span>
+<span class="text-sm font-semibold">Overview</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">description</span>
-<p class="text-sm font-medium">Contract</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">description</span>
+<span class="text-sm font-semibold">Contract</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">content_cut</span>
-<p class="text-sm font-medium">Scope Engine</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">analytics</span>
+<span class="text-sm font-semibold">Scope</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">event_note</span>
-<p class="text-sm font-medium">Programme</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">calendar_month</span>
+<span class="text-sm font-semibold">Programme</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary/10 text-primary" href="#">
-<span class="material-symbols-outlined filled-icon text-xl">receipt_long</span>
-<p class="text-sm font-bold">Claims/Invoices</p>
+<a class="flex items-center gap-3 px-3 py-2.5 bg-primary/10 text-primary rounded-lg" href="#">
+<span class="material-symbols-outlined text-[20px] filled-icon" style="font-variation-settings: 'FILL' 1">receipt_long</span>
+<span class="text-sm font-bold">Payment Claims</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">shield</span>
-<p class="text-sm font-medium">Evidence Vault</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">inventory_2</span>
+<span class="text-sm font-semibold">Evidence</span>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-[#4c739a] hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-xl">settings</span>
-<p class="text-sm font-medium">Settings</p>
+<a class="flex items-center gap-3 px-3 py-2.5 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-all" href="#">
+<span class="material-symbols-outlined text-[20px]">settings</span>
+<span class="text-sm font-semibold">Settings</span>
 </a>
 </nav>
-</div>
-<div class="pt-4 border-t border-slate-100 dark:border-slate-800">
-<div class="px-3 py-3 rounded-lg bg-amber-50 dark:bg-amber-900/10 border border-amber-100 dark:border-amber-900/30">
-<p class="text-[10px] uppercase font-bold text-amber-600 dark:text-amber-500 tracking-wider">Next Ref Date</p>
-<p class="text-sm font-bold mt-1">28th October 2024</p>
-<p class="text-[10px] text-amber-600 dark:text-amber-500 mt-1">4 days remaining</p>
-</div>
+<div class="p-4 border-t border-slate-200 dark:border-slate-800">
+<a class="flex items-center gap-3 px-3 py-2 text-slate-500 dark:text-slate-400 hover:text-slate-900 dark:hover:text-white transition-colors" href="#">
+<span class="material-symbols-outlined text-[20px]">arrow_back</span>
+<span class="text-sm font-medium">Back to Launchpad</span>
+</a>
 </div>
 </aside>
 <main class="flex-1 flex flex-col overflow-y-auto bg-slate-50 dark:bg-slate-950">
-<div class="flex items-center justify-between px-8 py-6">
+<div class="border-b border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 px-8 py-4">
+<div class="flex items-center justify-between">
 <div>
-<h1 class="text-[#0d141b] dark:text-white text-2xl font-black tracking-tight">Payment Claims Engine</h1>
+<p class="text-[10px] font-bold uppercase tracking-widest text-slate-400">Project</p>
+<h1 class="text-lg font-bold text-slate-900 dark:text-white">Skyline Apartments</h1>
+<p class="text-xs text-slate-500">Contract #2024-882-AU • Claims Workspace</p>
+</div>
+<span class="px-2 py-1 text-[10px] font-bold bg-emerald-50 text-emerald-600 rounded-full">Active</span>
+</div>
+</div>
+<div class="flex items-center justify-between px-8 py-6 bg-white dark:bg-slate-900 border-b border-slate-200 dark:border-slate-800">
+<div>
+<h1 class="text-[#0d141b] dark:text-white text-2xl font-black tracking-tight">Payment Claims</h1>
 <p class="text-[#4c739a] text-sm mt-1">Standardized SOP Act workflow and certification tracking.</p>
 </div>
 <div class="flex gap-3">
 <button class="flex items-center justify-center rounded-lg h-10 px-4 bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 text-[#0d141b] dark:text-white text-sm font-bold shadow-sm">
 <span class="material-symbols-outlined mr-2 text-lg">download</span> Statement of Account
-                    </button>
+</button>
 <button class="flex items-center justify-center rounded-lg h-10 px-4 bg-primary text-white text-sm font-bold shadow-lg shadow-primary/20">
 <span class="material-symbols-outlined mr-2 text-lg">add_circle</span> Generate Payment Claim
-                    </button>
+</button>
 </div>
 </div>
 <div class="px-8 pb-8 grid grid-cols-12 gap-6">
@@ -337,6 +344,7 @@
 <span class="font-bold text-slate-400">SUBBIE HQ PRO</span>
 </div>
 </footer>
+</div>
 </div>
 
 </body></html>
